--- a/eDrawingsPrinter/Properties/Settings.settings
+++ b/eDrawingsPrinter/Properties/Settings.settings
@@ -1,14 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="eDrawingsPrinter.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
   <Profiles />
-  <Settings>
-    <Setting Name="snipeitConnectionString" Type="(Connection string)" Scope="Application">
-      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;server=pokyapps2;user id=root;password=Pi$t0n435;persistsecurityinfo=True;port=3307;database=snipeit;allowuservariables=True&lt;/ConnectionString&gt;
-  &lt;ProviderName&gt;MySql.Data.MySqlClient&lt;/ProviderName&gt;
-&lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">server=pokyapps2;user id=root;password=Pi$t0n435;persistsecurityinfo=True;port=3307;database=snipeit;allowuservariables=True</Value>
-    </Setting>
-  </Settings>
+  <Settings />
 </SettingsFile>
