--- a/eDrawingsPrinter/eDrawingsPrinter.csproj
+++ b/eDrawingsPrinter/eDrawingsPrinter.csproj
@@ -92,6 +92,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PreLoadMessage.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
