Added Side Preview for Drawings.

--- a/eDrawingsPrinter/eDrawingFinder.csproj
+++ b/eDrawingsPrinter/eDrawingFinder.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PreLoadMessage.cs" />
+    <Compile Include="Preview.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
