--- a/eDrawingsPrinter/packages.config
+++ b/eDrawingsPrinter/packages.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CsvHelper" version="12.1.2" targetFramework="net461" requireReinstallation="true" />
-  <package id="log4net" version="2.0.8" targetFramework="net461" requireReinstallation="true" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" requireReinstallation="true" />
-  <package id="NLog" version="4.5.11" targetFramework="net461" requireReinstallation="true" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="CsvHelper" version="12.1.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
