--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -1,18 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="EDF.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <EDF.UI.Properties.Settings>
-            <setting name="FormExpanded" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="DeafultPrinter" serializeAs="String">
-                <value />
-            </setting>
-        </EDF.UI.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="EDF.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <userSettings>
+    <EDF.UI.Properties.Settings>
+      <setting name="FormExpanded" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DefaultPrinter" serializeAs="String">
+        <value />
+      </setting>
+    </EDF.UI.Properties.Settings>
+  </userSettings>
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=.\DrawingDatabase.db;Version=3;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
