--- a/EDF.BL/packages.config
+++ b/EDF.BL/packages.config
@@ -8,5 +8,6 @@
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
