--- a/EDF.UI/packages.config
+++ b/EDF.UI/packages.config
@@ -6,4 +6,5 @@
   <package id="SharpCompress" version="0.17.1" targetFramework="net461" />
   <package id="Splat" version="1.6.2" targetFramework="net461" />
   <package id="squirrel.windows" version="1.9.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
 </packages>
