Updated to make SQL main resource.

--- a/EDF.Common/log4net.config
+++ b/EDF.Common/log4net.config
@@ -8,8 +8,12 @@
     <!-- Sets Console appender -->
     <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value=" %-2level [%method] - %message%newline"/>
+        <conversionPattern value=" %4level - %message%newline"/>
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="Debug"/>
+        <param name="LevelMax" value="Fatal"/>
+      </filter>
     </appender>
     
     <!-- Sets File appender -->
@@ -21,8 +25,12 @@
       <maximumFileSize value="10MB"/>
       <staticLogFileName value="true"/>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%-6date %-6[%level] - %message%newline"/>
+        <conversionPattern value="%6date %6[%level] - %message%newline"/>
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="Info"/>
+        <param name="LevelMax" value="Fatal"/>
+      </filter>
     </appender>
 
     <!-- Sets ColoredConsole appender 
@@ -54,19 +62,22 @@
     -->
 
     <!-- (high) OFF > FATAL > ERROR > WARN > INFO > DEBUG > ALL (low) -->
-    <!-- Applies Levels to references -->
+    <!-- Applies Levels to references
     <root>
       <level value="ALL"/>
       <appender-ref ref="FileAppender"/>
       <appender-ref ref="ConsoleAppender"/>
     </root>
-
-
-    <!-- Print only messages of level WARN or above in the package EDF.Common.Log 
-    <logger name="EDF.Common.Log">
-    <level value="DEBUG"/>
-    </logger>
     -->
+
+
+    <!-- Print only messages of level WARN or above in the package EDF.Common.Log -->
+    <logger name="EDF.Common.Log">
+    <appender-ref ref="ConsoleAppender" />
+     <appender-ref ref="FileAppender" />
+    </logger>
+    
+    
 
 </log4net>
 </configuration>
