--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -10,7 +10,7 @@
   <userSettings>
     <EDF.UI.Properties.Settings>
       <setting name="FormExpanded" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="DefaultPrinter" serializeAs="String">
         <value />
