--- a/EDF.Common/EDF.Common.csproj
+++ b/EDF.Common/EDF.Common.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Data.SQLite, Version=1.0.110.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.110.0\lib\net46\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,8 +72,10 @@
   <ItemGroup>
     <Compile Include="DrawingGroupEnum.cs" />
     <Compile Include="IDrawing.cs" />
+    <Compile Include="ListToEnum.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadedMessageBox.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="log4net.config">
