--- a/EDF.DL/packages.config
+++ b/EDF.DL/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CsvHelper" version="12.1.2" targetFramework="net461" />
   <package id="Dapper" version="1.60.1" targetFramework="net461" />
+  <package id="Dapper.SqlBuilder" version="1.60.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
