--- a/EDF.DLTests/EDF.DLTests.csproj
+++ b/EDF.DLTests/EDF.DLTests.csproj
@@ -77,6 +77,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="DataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteDataAccessTests.cs" />
   </ItemGroup>
