SQLite implementation complete.

--- a/EDF.Common/log4net.config
+++ b/EDF.Common/log4net.config
@@ -18,7 +18,7 @@
     
     <!-- Sets File appender -->
     <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="${LocalAppData}\eDrawingFinder\application.log"/>
+      <file value="${LocalAppData}\eDrawingFinder\EDF.log"/>
       <appendToFile value="true"/>
       <rollingStyle value="Size"/>
       <maxSizeRollBackups value="5"/>
