--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -10,10 +10,13 @@
   <userSettings>
     <EDF.UI.Properties.Settings>
       <setting name="FormExpanded" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DefaultPrinter" serializeAs="String">
         <value />
+      </setting>
+      <setting name="eDrawingDefault" serializeAs="String">
+        <value>True</value>
       </setting>
     </EDF.UI.Properties.Settings>
   </userSettings>
