--- a/EDF.UI/Properties/Settings.settings
+++ b/EDF.UI/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="DefaultPrinter" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="eDrawingDefault" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
