--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -23,4 +23,12 @@
   <connectionStrings>
     <add name="Default" connectionString="Data Source=%LocalAppData%\eDrawingFinder\DrawingDatabase.db;Version=3;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
