Added new settings for persistance.

--- a/EDF.UI/app.config
+++ b/EDF.UI/app.config
@@ -18,6 +18,15 @@
       <setting name="eDrawingDefault" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="ReactiveCheckbox" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="OPChecked" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="BMChecked" serializeAs="String">
+        <value>False</value>
+      </setting>
     </EDF.UI.Properties.Settings>
   </userSettings>
   <connectionStrings>
