--- a/nuget/eDrawingFinder.nuspec
+++ b/nuget/eDrawingFinder.nuspec
@@ -3,14 +3,14 @@
   <metadata>
     <!-- Required elements-->
     <id>eDrawingFinder</id>
-    <version>3.0.0-beta18</version>
+    <version>3.0.2</version>
     <description>eDrawing Finder</description>
     <authors>Pan-Oston</authors>
 
     <!-- Optional elements-->
     <owners>Pan-Oston</owners>
     <title>eDrawing Finder</title>
-    <releaseNotes>Beta Releases.</releaseNotes>
+    <releaseNotes>Initial Full Release.</releaseNotes>
     <copyright>Copyright © 2019</copyright>
   </metadata>
   
